--- a/project_frontend/src/app/app.component.html
+++ b/project_frontend/src/app/app.component.html
@@ -17,6 +17,9 @@
         <li>
           <a [routerLink]="['/invoice-list']" class="nav-link px-2 link-body-emphasis">Invoices</a>
         </li>
+        <li>
+          <a [routerLink]="['/user']" class="nav-link px-2 link-body-emphasis">User</a>
+        </li>
       </ul>
     </div>
   </div>
