--- a/project_frontend/src/app/components/appointment/appointment-details/appointment-details.component.html
+++ b/project_frontend/src/app/components/appointment/appointment-details/appointment-details.component.html
@@ -24,10 +24,7 @@
             </tr>
         </tbody>
     </table>
-    <button type="button" class="btn btn-primary" [routerLink]="['']">
-        Back
-    </button>
-    <button type="button" class="btn btn-success">
+    <button type="button" class="btn btn-success" (click)="sendReminder()">
         Send Reminder
     </button>
 <div>
