--- a/project_frontend/src/app/components/services/services-list/services-list.component.html
+++ b/project_frontend/src/app/components/services/services-list/services-list.component.html
@@ -17,7 +17,7 @@
             <th scope="row">{{s.id}}</th>
             <td>{{s.name}}</td>
             <td>{{s.durationInMinutes}}</td>
-            <td>${{s.price}}</td>
+            <td>{{s.price | currency}}</td>
             <td>
                 <button class="btn btn-info" [routerLink]="['/edit-services', s.id]">Edit</button>
             </td>
